--- a/about.html
+++ b/about.html
@@ -97,10 +97,10 @@
                         </svg></button>
                     <button name="btnAbout" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='about.html';">About</button>
-                    <button name="btnPlants" type="button" class="rightbtn navbtn"
-                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnLearn" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='learn.html';">Learn</button>
+                    <button name="btnPlants" type="button" class="rightbtn navbtn"
+                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnHome" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='index.html';">Home</button>
                 </div>
@@ -119,14 +119,16 @@
     <main id="main">
         <section class="section1 intro" id="intro">
             <h1>About Us</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="section2 aboutUs" id="aboutUs">
             <a href="#aboutUs">
                 <h1>Our Work</h1>
             </a>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Make Crops. This project is to express the beauty of crop production in different ways.</p>
+            <p>Hungry? Grab a crop.</p>
+            <p>Bored? Grab a crop.</p>
+            <p>Upset? Grab a crop.</p>
         </section>
         <section class="section3 ourSquad" id="ourSquad">
             <a href="#ourSquad">
@@ -142,33 +144,36 @@
                     </div>
                 </div>
                 <div class="squadCard">
-                    <img src="img/protosample/favicon.png">
+                    <img src="img/protosample/ico/kurt.jpg">
                     <div class="squadCardDesc">
-                        <h3>Ganbaru-kun</h3>
-                        <p>SysAdmin at Imagimation</p>
+                        <h3>Kurt Simera</h3>
+                        <p>I'm fine</p>
+                        <p>I study well</p>
+                        <p>My head hurts</p>
                     </div>
                 </div>
                 <div class="squadCard">
-                    <img src="img/protosample/favicon.png">
+                    <img src="img/protosample/ico/kenneth.jpg">
                     <div class="squadCardDesc">
-                        <h3>Ganbaru-kun</h3>
-                        <p>SysAdmin at Imagimation</p>
+                        <h3>Kenneth Manipis</h3>
+                        <p>Join My Fandom</p>
+                        <p>@KennethManipis OFFICIAL FANS GROUP</p>
                     </div>
                 </div>
             </div>
             <div class="squadCardsContainer">
                 <div class="squadCard">
-                    <img src="img/protosample/favicon.png">
+                    <img src="img/protosample/ico/david.jpg">
                     <div class="squadCardDesc">
-                        <h3>Ganbaru-kun</h3>
-                        <p>SysAdmin at Imagimation</p>
+                        <h3>David Timajo</h3>
+                        <p>What is up</p>
                     </div>
                 </div>
                 <div class="squadCard">
-                    <img src="img/protosample/favicon.png">
+                    <img src="img/protosample/ico/julian.jpg">
                     <div class="squadCardDesc">
-                        <h3>Ganbaru-kun</h3>
-                        <p>SysAdmin at Imagimation</p>
+                        <h3>Julian Paguirigan</h3>
+                        <p>I did nothing here</p>
                     </div>
                 </div>
             </div>
@@ -180,12 +185,12 @@
             <div class="threecolumn footerColumnDivider">
                 <div class="socialLinks">
                     <h3>Find us on</h3>
-                    <a href="https://github.com/makecrops"><img
+                    <a href="https://github.com/makecrops" target="_blank"><img
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
-                    <a href="https://github.com/makecrops/makecrops.github.io"><img
+                    <a href="https://github.com/makecrops/makecrops.github.io" target="_blank"><img
                             src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
-                    <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
+                    <a href="https://github.com/lordgumball20" target="_blank"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
@@ -207,11 +212,11 @@
                 <h4>2020 © Make Crops Co.</h4> -->
                 <img src="img/protosample/ico/logotype.png" style="width: 50%;">
                 <hr class="dashed">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
                 LordGumball20 is licensed
-                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons
                     Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
