--- a/learn.html
+++ b/learn.html
@@ -96,10 +96,10 @@
                         </svg></button>
                     <button name="btnAbout" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='about.html';">About</button>
-                    <button name="btnPlants" type="button" class="rightbtn navbtn"
-                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnLearn" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='learn.html';">Learn</button>
+                    <button name="btnPlants" type="button" class="rightbtn navbtn"
+                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnHome" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='index.html';">Home</button>
                 </div>
@@ -118,7 +118,6 @@
     <main id="main">
         <section class="section1 intro" id="intro">
             <h1>Learn</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="section2 aboutToolsContainer">
             <div class="aboutTools" id="aboutTools">
@@ -502,6 +501,17 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <section class="section2 refLearn" id="refLearn">
+                <a href="#refLearn">
+                    <h3>References</h3>
+                </a>
+                <hr>
+                <p><a href="https://www.slideshare.net/RochelleNato/lesson-1-use-of-farm-tools-and-equipment" target="_blank">
+                https://www.slideshare.net/RochelleNato/lesson-1-use-of-farm-tools-and-equipment</a></p>
+                <p><a href="https://gltnhs-tle.weebly.com/lesson-14.html" target="_blank">
+                https://gltnhs-tle.weebly.com/lesson-14.html</a></p>
+            </section>
         </section>
     </main>
     
@@ -510,12 +520,12 @@
             <div class="threecolumn footerColumnDivider">
                 <div class="socialLinks">
                     <h3>Find us on</h3>
-                    <a href="https://github.com/makecrops"><img
+                    <a href="https://github.com/makecrops" target="_blank"><img
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
-                    <a href="https://github.com/makecrops/makecrops.github.io"><img
+                    <a href="https://github.com/makecrops/makecrops.github.io" target="_blank"><img
                             src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
-                    <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
+                    <a href="https://github.com/lordgumball20" target="_blank"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
@@ -537,11 +547,11 @@
                 <h4>2020 © Make Crops Co.</h4> -->
                 <img src="img/protosample/ico/logotype.png" style="width: 50%;">
                 <hr class="dashed">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
                 LordGumball20 is licensed
-                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons
                     Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
