--- a/plants.html
+++ b/plants.html
@@ -96,10 +96,10 @@
                     </svg></button>
                     <button name="btnAbout" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='about.html';">About</button>
-                    <button name="btnPlants" type="button" class="rightbtn navbtn"
-                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnLearn" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='learn.html';">Learn</button>
+                    <button name="btnPlants" type="button" class="rightbtn navbtn"
+                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnHome" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='index.html';">Home</button>
                 </div>
@@ -115,22 +115,16 @@
     <main id="main">
         <section class="section1 intro" id="intro">
             <h1>Plants</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="section2 aboutPlants" id="aboutPlants">
             <a href="#aboutPlants">
-                <h1>About our project</h1>
+                <h1>Plant Weekly Growth Chart</h1>
             </a>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
+            <p>Documentation of our team's represenatative (Simera).</p>
         </section>
         <section class="section3 plantProgress" id="plantProgress">
             <a href="#plantProgress">
-                <h1>Plant Progress</h1>
             </a>
             <hr>
             <div class="plantContent">
@@ -143,9 +137,9 @@
                         <div class="unequalcolumn xxvcolumnleft">
                             <div class="plantColumnStyle">
                                 <div class="plantImg">
-                                    <img src="img/protosample/assets/plants/1.jpg">
-                                    <img src="img/protosample/assets/plants/1.jpg">
-                                    <img src="img/protosample/assets/plants/1.jpg">
+                                    <img src="img/protosample/imgPlants/Week1.jpg">
+                                    <img src="img/protosample/imgPlants/Week1.jpg">
+                                    <img src="img/protosample/imgPlants/Week1.jpg">
                                 </div>
                                 <div class="plantTxT">
                                     <h3>Plants</h3>
@@ -155,22 +149,218 @@
                         <div class="unequalcolumn lxxvcolumnright">
                             <div class="plantColumnStyle">
                                 <div class="plantDesc">
-                                    <h2>Description</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                    <h2>Brief Conclusion</h2>
+                                    <p>The plant is healthy, looking good and fresh.</p>
                                 </div>
                                 <div class="plantInfo">
                                     <div class="row">
                                         <div class="threecolumn plantInfoBox">
-                                            <h2>Plant height</h2>
-                                            <p>25 Centimetre</p>
+                                            <h2>Plant Height</h2>
+                                            <p>6.5 inches</p>
                                         </div>
                                         <div class="threecolumn plantInfoBox">
-                                            <h2>Plant height</h2>
-                                            <p>25 Centimetre</p>
+                                            <h2>Leaves Count</h2>
+                                            <p>15 Leaves</p>
                                         </div>
                                         <div class="threecolumn plantInfoBox">
-                                            <h2>Plant height</h2>
-                                            <p>25 Centimetre</p>
+                                            <h2>Plant Color</h2>
+                                            <p>Green</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="plantContent">
+                <div class="plantTitle">
+                    <h2>Week 2</h2>
+                </div>
+                <br>
+                <div class="plantBox">
+                    <div class="row plantRow">
+                        <div class="unequalcolumn xxvcolumnleft">
+                            <div class="plantColumnStyle">
+                                <div class="plantImg">
+                                    <img src="img/protosample/imgPlants/Week2.jpg">
+                                    <img src="img/protosample/imgPlants/Week2.jpg">
+                                    <img src="img/protosample/imgPlants/Week2.jpg">
+                                </div>
+                                <div class="plantTxT">
+                                    <h3>Plants</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unequalcolumn lxxvcolumnright">
+                            <div class="plantColumnStyle">
+                                <div class="plantDesc">
+                                    <h2>Brief Conclusion</h2>
+                                    <p>There's a few inches growth. Leaves count and the color is still the same.</p>
+                                </div>
+                                <div class="plantInfo">
+                                    <div class="row">
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Height</h2>
+                                            <p>6.7 inches</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Leaves Count</h2>
+                                            <p>15 Leaves</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Color</h2>
+                                            <p>Green</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="plantContent">
+                <div class="plantTitle">
+                    <h2>Week 3</h2>
+                </div>
+                <br>
+                <div class="plantBox">
+                    <div class="row plantRow">
+                        <div class="unequalcolumn xxvcolumnleft">
+                            <div class="plantColumnStyle">
+                                <div class="plantImg">
+                                    <img src="img/protosample/imgPlants/Week3.jpg">
+                                    <img src="img/protosample/imgPlants/Week3.jpg">
+                                    <img src="img/protosample/imgPlants/Week3.jpg">
+                                </div>
+                                <div class="plantTxT">
+                                    <h3>Plants</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unequalcolumn lxxvcolumnright">
+                            <div class="plantColumnStyle">
+                                <div class="plantDesc">
+                                    <h2>Brief Conclusion</h2>
+                                    <p>Again, there's a few inches growth. A leaf is growing
+                                    so the leaves become 1 more than the past week. The green
+                                    color became a little dark because of the typhoon.
+                                    </p>
+                                </div>
+                                <div class="plantInfo">
+                                    <div class="row">
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Height</h2>
+                                            <p>6.8 inches</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Leaves Count</h2>
+                                            <p>16 Leaves</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Color</h2>
+                                            <p>Slightly Dark Green</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="plantContent">
+                <div class="plantTitle">
+                    <h2>Week 4</h2>
+                </div>
+                <br>
+                <div class="plantBox">
+                    <div class="row plantRow">
+                        <div class="unequalcolumn xxvcolumnleft">
+                            <div class="plantColumnStyle">
+                                <div class="plantImg">
+                                    <img src="img/protosample/imgPlants/Week4-1.jpg">
+                                    <img src="img/protosample/imgPlants/Week4-2.jpg">
+                                    <img src="img/protosample/imgPlants/Week4-3.jpg">
+                                </div>
+                                <div class="plantTxT">
+                                    <h3>Plants</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unequalcolumn lxxvcolumnright">
+                            <div class="plantColumnStyle">
+                                <div class="plantDesc">
+                                    <h2>Brief Conclusion</h2>
+                                    <p>There is no changes in plant height and leaves count. The plant
+                                    height is probably affected by the density of the soil. The color has 
+                                    a little change because of the weather (Typhoon Rolly).
+                                    </p>
+                                </div>
+                                <div class="plantInfo">
+                                    <div class="row">
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Height</h2>
+                                            <p>6.8 inches</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Leaves Count</h2>
+                                            <p>16 Leaves</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Color</h2>
+                                            <p>Pale Green</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="plantContent">
+                <div class="plantTitle">
+                    <h2>Week 5</h2>
+                </div>
+                <br>
+                <div class="plantBox">
+                    <div class="row plantRow">
+                        <div class="unequalcolumn xxvcolumnleft">
+                            <div class="plantColumnStyle">
+                                <div class="plantImg">
+                                    <img src="img/protosample/imgPlants/Week5-1.jpg">
+                                    <img src="img/protosample/imgPlants/Week5-2.jpg">
+                                    <img src="img/protosample/imgPlants/Week5-3.jpg">
+                                </div>
+                                <div class="plantTxT">
+                                    <h3>Plants</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unequalcolumn lxxvcolumnright">
+                            <div class="plantColumnStyle">
+                                <div class="plantDesc">
+                                    <h2>Brief Conclusion</h2>
+                                    <p>Few inches growth. Another leaf has been born, yey!
+                                    The color came back to it's normal color because the weather is well and calm.
+                                    </p>
+                                </div>
+                                <div class="plantInfo">
+                                    <div class="row">
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Height</h2>
+                                            <p>6.9 inches</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Leaves Count</h2>
+                                            <p>17 Leaves</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant Color</h2>
+                                            <p>Green</p>
                                         </div>
                                     </div>
                                 </div>
@@ -187,12 +377,12 @@
             <div class="threecolumn footerColumnDivider">
                 <div class="socialLinks">
                     <h3>Find us on</h3>
-                    <a href="https://github.com/makecrops"><img
+                    <a href="https://github.com/makecrops" target="_blank"><img
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
-                    <a href="https://github.com/makecrops/makecrops.github.io"><img
+                    <a href="https://github.com/makecrops/makecrops.github.io" target="_blank"><img
                             src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
-                    <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
+                    <a href="https://github.com/lordgumball20" target="_blank"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
@@ -214,11 +404,11 @@
                 <h4>2020 © Make Crops Co.</h4> -->
                 <img src="img/protosample/ico/logotype.png" style="width: 50%;">
                 <hr class="dashed">
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
                 LordGumball20 is licensed
-                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons
                     Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
