--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                         </svg></button>
                     <button name="btnAbout" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='about.html';">About</button>
-                    <button name="btnPlants" type="button" class="rightbtn navbtn"
-                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnLearn" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='learn.html';">Learn</button>
+                    <button name="btnPlants" type="button" class="rightbtn navbtn"
+                        onclick="window.location.href='plants.html';">Plants</button>
                     <button name="btnHome" type="button" class="rightbtn navbtn"
                         onclick="window.location.href='index.html';">Home</button>
                 </div>
@@ -146,7 +146,7 @@
             <div class="row">
                 <div>
                     <img src="img/protosample/icon.png" alt="test" class="logo"></img>
-                    <h1>"The ultimate goal of farming is not the growing of crops, but the cultivation and perfection of human beings."</h1>
+                    <h1>The ultimate goal of farming is not the growing of crops, but the cultivation and perfection of human beings.</h1>
                 </div>
                 <div>
                 </div>
